# FinnCore

./: .gitignore  Account.cpp  Account.hpp  CMakeLists.txt  Category.cpp  Category.hpp  Dockerfile  README.md  Wallet.hpp  core
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  refactoring-request.md
.github/workflows/: build-and-test.yml
docs/: Account_8hpp_source.html  Category_8hpp_source.html  EntityContainer_8hpp_source.html  Id_8hpp_source.html  NamedEntity_8hpp_source.html  NullEntityError_8hpp_source.html  Settings_8hpp_source.html  Transaction_8hpp.html  Transaction_8hpp_source.html  UniqueEntity_8hpp_source.html  Wallet_8hpp_source.html  annotated.html  classAccount-members.html  classAccount.html  classCategory-members.html  classCategory.html  classEntityContainer-members.html  classEntityContainer.html  classId-members.html  classId.html  classIdPredicate-members.html  classIdPredicate.html  classNamedEntity-members.html  classNamedEntity.html  classSettings-members.html  classSettings.html  classTransaction-members.html  classTransaction.html  classUniqueEntity-members.html  classUniqueEntity.html  classUniqueEntity_1_1IdPredicate-members.html  classUniqueEntity_1_1IdPredicate.html  classWallet-members.html  classWallet.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  (+50 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+9 more)
jni/: CMakeLists.txt  JniAccount.cpp
src/: Account.cpp  Account.hpp  CMakeLists.txt  Category.cpp  Category.hpp  EntityContainer.hpp  Id.cpp  Id.hpp  NamedEntity.cpp  NamedEntity.hpp  NullEntityError.hpp  Settings.cpp  Settings.hpp  Transaction.cpp  Transaction.hpp  UniqueEntity.hpp  Wallet.cpp  Wallet.hpp
tests/: AccountTests.cpp  CMakeLists.txt  CategoryTests.cpp  CategoryTests.hpp  IdTests.cpp  NamedEntityTests.cpp  TransactionTests.cpp  TransactionTests.hpp  UniqueEntityTests.cpp  Utils.hpp  WalletTests.cpp  WalletTests.hpp
